[gd_scene load_steps=4 format=2]

[ext_resource path="res://codeart/panel_alat_w.webp" type="Texture" id=1]
[ext_resource path="res://codeart/akun.webp" type="Texture" id=2]
[ext_resource path="res://codeart/script/panel_atas.gd" type="Script" id=3]

[node name="panel_atas" type="HBoxContainer"]
anchor_right = 1.0
script = ExtResource( 3 )

[node name="alat" type="Button" parent="."]
margin_right = 44.0
margin_bottom = 38.0
icon = ExtResource( 1 )
flat = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 48.0
margin_right = 928.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5

[node name="download_luncher" type="Button" parent="."]
margin_left = 932.0
margin_right = 976.0
margin_bottom = 38.0
icon = ExtResource( 2 )

[node name="akun" type="Button" parent="."]
margin_left = 980.0
margin_right = 1024.0
margin_bottom = 38.0
icon = ExtResource( 2 )

[connection signal="pressed" from="alat" to="." method="_on_alat_pressed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="download_luncher" to="." method="_on_download_luncher_pressed"]
[connection signal="pressed" from="akun" to="." method="_on_akun_pressed"]
